// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationControls has a PaginationControlTextField that renders with pageInputValue prop of pageNum + 1 1`] = `
<PaginationControlTextField
  changePageToUserInput={[Function]}
  pageInputValue={1}
  setPageInputValue={[Function]}
/>
`;

exports[`PaginationControls has a next page button that renders as disabled when on the last page 1`] = `
<PaginationControlButton
  disabled={true}
  id="next-page"
  onClick={[Function]}
  variant="next"
/>
`;

exports[`PaginationControls has a next page button that renders as not disabled when not on last page 1`] = `
<PaginationControlButton
  disabled={false}
  id="next-page"
  onClick={[Function]}
  variant="next"
/>
`;

exports[`PaginationControls has a previous page button that renders as disabled when on page 0 1`] = `
<PaginationControlButton
  disabled={true}
  id="previous-page"
  onClick={[Function]}
  variant="previous"
/>
`;

exports[`PaginationControls has a previous page button that renders as not disabled when not on page 0 1`] = `
<PaginationControlButton
  disabled={false}
  id="previous-page"
  onClick={[Function]}
  variant="previous"
/>
`;

exports[`PaginationControls renders with children in correct order 1`] = `
<div
  className="makeStyles-paginationControlsContainer-1"
>
  <PaginationControlButton
    disabled={true}
    id="previous-page"
    onClick={[Function]}
    variant="previous"
  />
  <div
    className="makeStyles-controlText-2"
  >
    Page
  </div>
  <PaginationControlTextField
    changePageToUserInput={[Function]}
    pageInputValue={1}
    setPageInputValue={[Function]}
  />
  <div
    className="makeStyles-controlText-2"
  >
    of 
    5
  </div>
  <PaginationControlButton
    disabled={false}
    id="next-page"
    onClick={[Function]}
    variant="next"
  />
</div>
`;
